--- a/index.html
+++ b/index.html
@@ -1,127 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
-</head>
-<body>
-  <header>
-    <div class="container">
-      <div class="container-flex">
-        <nav>
-          <ul>
-            <li><a href="#">Uomo</a></li>
-            <li><a href="#">Donna</a></li>
-            <li><a href="#">Bambini</a></li>
-          </ul>
-        </nav>
-        <div class="logo"><a href="#"><img src="img/boolean-logo.png" alt="logo"></a></div>
-        <div>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="h-flex">
           <nav>
-            <ul class="icon">
-              <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
-              <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
-              <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
+            <ul>
+              <li><a href="#">Uomo</a></li>
+              <li><a href="#">Donna</a></li>
+              <li><a href="#">Bambini</a></li>
             </ul>
           </nav>
-        </div>
-      </div>  
-    </div>
-  </header>
-  <main>
-    <div class="row">
-      <div class="product">
-        <img src="img/1.webp" alt="">
-        <div>
-          <div class="discount-50">-50%</div>
-          <div class="sost">Sostenibilità</div>
-          <div><i class="fa-solid fa-heart"></i></div>
-          <div class="no-bold">Levi's</div>
-          <div>RELAXED FIT TEE UNISEX</div>
-          <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
+          <div class="logo"><a href="#"><img src="img/boolean-logo.png"
+                alt="logo"></a></div>
+          <div>
+            <nav>
+              <ul class="icon">
+                <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+                <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </div>
-      <div class="product">
-        <img src="img/2.webp" alt="">
-        <div>
-          <div class="discount-50">-50%</div>
-          <div><i class="fa-solid fa-heart"></i></div>
-          <div class="no-bold">Levi's</div>
-          <div>RELAXED FIT TEE UNISEX</div>
-          <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
+    </header>
+    <main>
+      <div class="row container">
+        <div class="product">
+          <img src="img/1.webp" alt="">
+          <div>
+            <div class="discount-50">-50%</div>
+            <div class="sost">Sostenibilità</div>
+            <div><i class="fa-solid fa-heart"></i></div>
+            <div class="no-bold">Levi's</div>
+            <div>RELAXED FIT TEE UNISEX</div>
+            <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="img/2.webp" alt="">
+          <div>
+            <div class="discount-50">-50%</div>
+            <div><i class="fa-solid fa-heart"></i></div>
+            <div class="no-bold">Levi's</div>
+            <div>RELAXED FIT TEE UNISEX</div>
+            <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="img/3.webp" alt="">
+          <div>
+            <div class="discount-50">-50%</div>
+            <div class="no-bold">Levi's</div>
+            <div><i class="fa-solid fa-heart"></i></div>
+            <div>RELAXED FIT TEE UNISEX</div>
+            <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="img/4.webp" alt="">
+          <div>
+            <div class="discount-50">-50%</div>
+            <div class="sost">Sostenibilità</div>
+            <div><i class="fa-solid fa-heart"></i></div>
+            <div class="no-bold">Levi's</div>
+            <div>RELAXED FIT TEE UNISEX</div>
+            <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="img/5.webp" alt="">
+          <div>
+            <div><i class="fa-solid fa-heart"></i></div>
+            <div class="no-bold">Levi's</div>
+            <div>RELAXED FIT TEE UNISEX</div>
+            <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="img/6.webp" alt="">
+          <div>
+            <div class="sost">Sostenibilità</div>
+            <div><i class="fa-solid fa-heart"></i></div>
+            <div class="no-bold">Levi's</div>
+            <div>RELAXED FIT TEE UNISEX</div>
+            <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
+          </div>
         </div>
       </div>
-      <div class="product">
-        <img src="img/3.webp" alt="">
-        <div>
-          <div class="discount-50">-50%</div>
-          <div class="no-bold">Levi's</div>
-          <div><i class="fa-solid fa-heart"></i></div>
-          <div>RELAXED FIT TEE UNISEX</div>
-          <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
-        </div>
-      </div>
-      <div class="product">
-        <img src="img/4.webp" alt="">
-        <div>
-          <div class="discount-50">-50%</div>
-          <div class="sost">Sostenibilità</div>
-          <div><i class="fa-solid fa-heart"></i></div>
-          <div class="no-bold">Levi's</div>
-          <div>RELAXED FIT TEE UNISEX</div>
-          <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
-        </div>
-      </div>
-      <div class="product">
-        <img src="img/5.webp" alt="">
-        <div>
-          <div><i class="fa-solid fa-heart"></i></div>
-          <div class="no-bold">Levi's</div>
-          <div>RELAXED FIT TEE UNISEX</div>
-          <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
-        </div>
-      </div>
-      <div class="product">
-        <img src="img/6.webp" alt="">
-        <div>
-          <div class="sost">Sostenibilità</div>
-          <div><i class="fa-solid fa-heart"></i></div>
-          <div class="no-bold">Levi's</div>
-          <div>RELAXED FIT TEE UNISEX</div>
-          <div class="price-1">14,99&euro;<span class="price-2"> 29.99&euro;</span></div>
-        </div>
-      </div>
-    </div>
-  </main>
+    </main>
 
-  <footer>
-    <div class="foot container-flex">
-      <div class="name">
-        <h3>Boolando s.r.l</h3>
-      </div>
-      <div class="info">
-        <nav>
-          <ul>
-            <li><a href="#">Informazioni legali</a></li>
-            <li><a href="#">Informazioni sulla privacy</a></li>
-            <li><a href="#">Diritto di accesso</a></li> 
-          </ul>
-        </nav>
-      </div>
-      <div class="socialfoot">
-        <div>Trovaci anche tu</div>
-      <div class="iconfoot">
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-      </div>      
-    </div>
-  </footer>
-</body>
-</html>
+    <footer>
+      <div class="container">
+        <div class="foot">
+          <div class="info">
+            <h3>Boolando s.r.l</h3>
+            <nav>
+              <ul>
+                <li><a href="#">Informazioni legali</a></li>
+                <li><a href="#">Informazioni sulla privacy</a></li>
+                <li><a href="#">Diritto di accesso</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="socialfoot">
+            <h4>Trovaci anche tu:<h4>
+                <div class="iconfoot">
+                  <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+                  <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                  <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                  <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                  <a href="#"><i class="fa-brands fa-square-youtube"></i></a>
+                </div>
+              </div>
+            </div>
+          </footer>
+        </body>
+      </html>
