--- a/index.html
+++ b/index.html
@@ -13,33 +13,34 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="h-flex">
+      <div class="container h-flex">
+        <nav>
+          <ul>
+            <li><a href="#">Uomo</a></li>
+            <li><a href="#">Donna</a></li>
+            <li><a href="#">Bambini</a></li>
+          </ul>
+        </nav>
+        <div class="logo"><a href="#"><img src="img/boolean-logo.png"
+              alt="logo"></a></div>
+        <div>
           <nav>
-            <ul>
-              <li><a href="#">Uomo</a></li>
-              <li><a href="#">Donna</a></li>
-              <li><a href="#">Bambini</a></li>
+            <ul class="icon">
+              <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+              <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+              <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
             </ul>
           </nav>
-          <div class="logo"><a href="#"><img src="img/boolean-logo.png"
-                alt="logo"></a></div>
-          <div>
-            <nav>
-              <ul class="icon">
-                <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
-                <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
-              </ul>
-            </nav>
-          </div>
         </div>
       </div>
     </header>
     <main>
       <div class="row container">
         <div class="product">
-          <img src="img/1.webp" alt="">
+          <div class="image">
+            <img src="img/1.webp" alt="">
+            <img class="secondary-img" src="img/1b.webp" alt="">
+          </div>
           <div>
             <div class="discount-50">-50%</div>
             <div class="sost">Sostenibilità</div>
@@ -103,27 +104,25 @@
     </main>
 
     <footer>
-      <div class="container">
-        <div class="foot">
-          <div class="info">
-            <h3>Boolando s.r.l</h3>
-            <nav>
-              <ul>
-                <li><a href="#">Informazioni legali</a></li>
-                <li><a href="#">Informazioni sulla privacy</a></li>
-                <li><a href="#">Diritto di accesso</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="socialfoot">
-            <h4>Trovaci anche tu:<h4>
-                <div class="iconfoot">
-                  <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-                  <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                  <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                  <a href="#"><i class="fa-brands fa-pinterest"></i></a>
-                  <a href="#"><i class="fa-brands fa-square-youtube"></i></a>
-                </div>
+      <div class="foot container">
+        <div class="info">
+          <h3>Boolando s.r.l</h3>
+          <nav>
+            <ul>
+              <li><a href="#">Informazioni legali</a></li>
+              <li><a href="#">Informazioni sulla privacy</a></li>
+              <li><a href="#">Diritto di accesso</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="socialfoot">
+          <h4>Trovaci anche tu:<h4>
+              <div class="iconfoot">
+                <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                <a href="#"><i class="fa-brands fa-square-youtube"></i></a>
               </div>
             </div>
           </footer>
